# template_api

./: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml  swagger.py  swagger.yaml  update_swagger.py
deploy/: cdk.py
src/: main.py  path.py  query.py  requests.py  requirements.txt  views.py
src/items/: path.py  query.py  responses.py  views.py
tests/: conftest.py  test_item.py  test_items.py
